--- a/makeExcuse.html
+++ b/makeExcuse.html
@@ -32,7 +32,7 @@ Upon hearing that, the guards quickly let go of you not wanting to get anything 
  <img style="top: 450px"src="images/excuse.png"></img>
 <hr>
 <div class="buttons">
-<a class="choose" href="youwin1.html">Continue</a>
+<a class="choose" href="youWin1.html">Continue</a>
 </div>
 <script>
 localStorage.setItem("page","makeExcuse")
