--- a/escapeGuards.html
+++ b/escapeGuards.html
@@ -30,7 +30,7 @@ background-color: rgb(23, 23, 23);
  <img style="top: 300px"src="images/hotAirBalloon.png"></img>
 <hr>
 <div class="buttons">
-<a class="choose" href="youwin2.html">Continue</a>
+<a class="choose" href="youWin2.html">Continue</a>
 </div>
 <script>
 localStorage.setItem("page","escapeGuards")
